Basic version that generates views and entities based on playbook.ts file

--- a/templates/index.js.tmpl
+++ b/templates/index.js.tmpl
@@ -1,6 +1,6 @@
 import React from 'react';
 import ReactDOM from 'react-dom';
-import { Application } from './components/Application';
+import { ApplicationView } from './src/components/ApplicationView';
 window.onload = function() {
-    ReactDOM.render(<Application />, document.getElementById('root'));
+    ReactDOM.render(<ApplicationView />, document.getElementById('root'));
 }
